refactor: apply code quality suggestions (List.of in CorsConfig, MIN_KEY_LENGTH_BYTES constant, anonymized logs, cleaned comments)